gccida/c1/trigraph_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/trigraph_p/src/cpplex.c:599:19: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
bool  trigraph_p( cpp_reader_0 *pfile) 
                  ^~~~~~~~~~~~
                  cpp_reader
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/trigraph_p/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/trigraph_p/src/cpplex.c:601:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *buffer; // rax 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/trigraph_p/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/trigraph_p/src/cpplex.c:610:7: error: use of undeclared identifier 'cpp_trigraph_map'; did you mean '_cpp_trigraph_map'?
if ( !cpp_trigraph_map[v3] ) 
      ^~~~~~~~~~~~~~~~
      _cpp_trigraph_map
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/trigraph_p/src/cpphash.h:351:28: note: '_cpp_trigraph_map' declared here
extern const unsigned char _cpp_trigraph_map[UCHAR_MAX + 1];
                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/trigraph_p/src/cpplex.c:624:1: error: use of undeclared identifier 'cpp_trigraph_map'; did you mean '_cpp_trigraph_map'?
cpp_trigraph_map[v3]); 
^~~~~~~~~~~~~~~~
_cpp_trigraph_map
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/trigraph_p/src/cpphash.h:351:28: note: '_cpp_trigraph_map' declared here
extern const unsigned char _cpp_trigraph_map[UCHAR_MAX + 1];
                           ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/trigraph_p/src/obj/cpplex.o] Error 1
